-----------------------------------

- The pysnmp version being used gets exposed to the MIB modules
  via the `MibBuilder` instance
- The .setObjects() method of the SMI types now accepts
  `append=False` parameter to let the caller adding more
  than 255 elements over the course of multiple calls
- Added support for some more missing fields of SMIv2 MACRO types
- Fixed non-implied-OID encoding in SNMP table indices

Revision 4.4.1, released 2017-10-23
-----------------------------------

- HMAC-SHA-2 Authentication Protocols support added (RFC-7860)
- The pycryptodome dependency replaced with pycryptodomex as
  it is recommended by the upstream to avoid unwanted interference
  with PyCrypto package should it also be installed
- Sphinx theme changed to Alabaster in the documentation
- Minor adjustments towards pyasn1 0.4.x compatibility
- Fixed ObjectIdentifier-into-ObjectIdentity casting at
  rfc1902.ObjectType MIB resolution harness
- Fixed NetworkAddress object handling in SNMP table indices
- Fixed MIB lookup by module:object.indices MIB object with
  InetAddressIPv{4,6} objects being in the index
- Fixed non-translated PDU being retries at CommandGenerator what
  leads to wrong PDU version being sent and even a crash on
  incompatible PDU/SNMP message combination

Revision 4.3.10, released 2017-10-06
------------------------------------

- Refactored partial SNMP message decoding to make it less dependent
  on unpublished pyasn1 API features.
- Fix to MibTableRow.setFromName() to keep the input parameter type when
  it propagates to the return value. Before this fix
  ObjectIdentity.prettyPrint() may crash when rendering malformed SNMP
  table indices.
- Fixed NotificationReceiver to include SNMPv1 TRAP Message community
  string into SNMPv2c/v3 TRAP PDU
- Fixed multiple bugs in SNMP table indices rendering, especially
  the InetAddressIPv6 type which was severely broken.
- Fixed crashing Bits.prettyPrint() implementation