@@ -1,2 +1,3 @@
 sphinx
 twisted
+trollius; python_version < '3.0'
