@@ -4,15 +4,15 @@
 Agent-side MIB implementations
 ------------------------------
 
-.. include:: /../../examples/v1arch/asyncore/agent/cmdrsp/implementing-scalar-mib-objects.py
+.. include:: /../../examples/v1arch/asyncore/agent/cmdrsp/implementing-scalar-mib-objects-over-ipv4-and-ipv6.py
    :start-after: """
    :end-before: """#
 
-.. literalinclude:: /../../examples/v1arch/asyncore/agent/cmdrsp/implementing-scalar-mib-objects.py
+.. literalinclude:: /../../examples/v1arch/asyncore/agent/cmdrsp/implementing-scalar-mib-objects-over-ipv4-and-ipv6.py
    :start-after: """#
    :language: python
 
-:download:`Download</../../examples/v1arch/asyncore/agent/cmdrsp/implementing-scalar-mib-objects.py>` script.
+:download:`Download</../../examples/v1arch/asyncore/agent/cmdrsp/implementing-scalar-mib-objects-over-ipv4-and-ipv6.py>` script.
 
 
 See also: :doc:`library reference </docs/api-reference>`.
